MyDevelopmentOrg/src/objects/Flow_Error__c.object
<CustomObject>
    <description>This is an object for catching Flow errors.</description>
    <fields>
        <fullName>Date_Time_Occurred__c</fullName>
        <description>This is the date / time the error occurred.</description>
        <label>Date Time Occurred</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Element__c</fullName>
        <description>This is the flow element that caused the error.</description>
        <inlineHelpText>This is the flow element that caused the error.</inlineHelpText>
        <label>Element</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>This is the flow error message.</description>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the user who caused the error.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Flow_Errors</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Flow Error</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date_Time_Occurred__c</columns>
        <columns>Element__c</columns>
        <columns>Message__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FE-{YY}-{MM}-{0000000}</displayFormat>
        <label>Flow Error Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flow Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>